<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_otp"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"/>


    <EditText
        android:id="@+id/otpField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_otp"
        android:layout_below="@id/tv"
        android:layout_centerHorizontal="true"
        android:importantForAutofill="no"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/submitOTP"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/otpField"
        android:text="@string/submit"
        android:layout_margin="5dp"/>


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:layout_below="@id/submitOTP"
        android:layout_marginVertical="24dp"/>



    <Button
        android:id="@+id/toastButton"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:text="@string/show_toast"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/dialogButton"
        android:layout_below="@id/toastButton"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_dialog"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/messageButton"
        android:layout_below="@id/dialogButton"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_message"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/actionButton"
        android:layout_below="@id/messageButton"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_action"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/shareButton"
        android:layout_below="@id/actionButton"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/rateButton"
        android:layout_below="@id/shareButton"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/topSnack"
        android:layout_below="@id/rateButton"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_snack"
        android:layout_margin="5dp"/>

</RelativeLayout>